# busbar-sf-utam

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  ERROR_REPORTING_IMPLEMENTATION.md  LICENSE  README.md  codecov.yml  index.html  lcov_frame.info  lcov_test.info
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: utam-codegen.md  utam-rust-bootstrap.md  utam-testing.md
.github/prompts/: README.md  add-action-trait.md  add-compiler-feature.md  add-element-type.md  add-validation-rule.md  fix-codegen-bug.md
.github/workflows/: ci.yml  release.yml  salesforce-integration.yml  salesforce-pageobjects.yml
applications/: explorerView.utam.json  metadataPickerModal.utam.json  orgDetails.utam.json  salesforceStudioApp.utam.json  salesforceStudioHome.utam.json  salesforceStudioNavigation.utam.json  salesforceStudioPageHeader.utam.json  salesforceStudioPageLayout.utam.json  salesforceStudioWelcomeMat.utam.json  studioHomeCard.utam.json
busbar-sf-api/: Cargo.toml
busbar-sf-api/src/: auth.rs  client.rs  error.rs  lib.rs  sobject.rs
busbar-sf-utam-setup/: setup-all.sh
busbar-sf-utam-setup/scripts/: 00-setup-labels.sh  01-create-milestones.sh  02-create-issues-phase0.sh  03-create-issues-phase1.sh  04-create-issues-phase2.sh  05-create-issues-phase3-4.sh  06-create-project.sh  07-scaffold-repo.sh
claude-plan-page-object-testing-wxLt1/: index.html
claude-plan-page-object-testing-wxLt1/data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
claude-plan-page-object-testing-wxLt1/export/: influxDbData.txt  prometheusData.txt
claude-plan-page-object-testing-wxLt1/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
claude-plan-page-object-testing-wxLt1/widgets/: behaviors.json  categories-trend.json  categories.json  environment.json  severity.json  status-chart.json  suites.json  summary.json
claude-salesforce-browser-testing-cd2k6/: index.html
claude-salesforce-browser-testing-cd2k6/export/: influxDbData.txt
claude-salesforce-browser-testing-cd2k6/history/: history.json
docs/: architecture.md  page-object-guide.md  runtime-guide.md
salesforce-pageobjects/: MANIFEST.json
salesforce-pageobjects/action/: actionRenderer.utam.json  actionsRibbon.utam.json  executorLwcHeadless.utam.json  lwcQuickActionLayout.utam.json  quickActionWrapper.utam.json
salesforce-pageobjects/activities/: activityPanelComposer.utam.json  activityTimelineFixedLayout.utam.json  activityTimelineFixedStencil.utam.json
salesforce-pageobjects/app_dev_agent/: agentExplorer.utam.json  agenticShell.utam.json  backlogWorkItem.utam.json  baseChatInput.utam.json  chatPanelEmptyState.utam.json  combobox.utam.json  commonError.utam.json  contentStream.utam.json  customButtonIcon.utam.json  customSectionsSection.utam.json  emptyState.utam.json  errorNotification.utam.json  executiveSummarySection.utam.json  homePanelChatView.utam.json  longRunningTask.utam.json  metadataNavigation.utam.json  panelMessageBlock.utam.json  panelMessageInput.utam.json  planBacklog.utam.json  planPreviewLayout.utam.json  prdLayout.utam.json  requirementsDocument.utam.json  scopedNotification.utam.json  sfStudioHome.utam.json  sfStudioProjectPanel.utam.json  skeleton.utam.json  statusPanel.utam.json  streamStatus.utam.json  studioChatInput.utam.json  studioRecommendedUtterances.utam.json  useCasesSection.utam.json  utteranceAction.utam.json  viewContainer.utam.json
salesforce-pageobjects/applications/: explorerView.utam.json  metadataPickerModal.utam.json  orgDetails.utam.json  salesforceStudioHome.utam.json  salesforceStudioNavigation.utam.json  salesforceStudioPageLayout.utam.json  salesforceStudioWelcomeMat.utam.json  (+1 more)
scripts/: extract_page_objects.py
testdata/: README.md
utam-cli/: Cargo.toml
utam-cli/src/: main.rs
utam-compiler/: Cargo.toml
utam-compiler/examples/: error_reporting_demo.rs  validate_json.rs
utam-compiler/src/: ast.rs  codegen.rs  error.rs  lib.rs  parser.rs  utils.rs  validator.rs
utam-compiler/src/schema/: utam-page-object.json
utam-compiler/tests/: ast_deserialization_tests.rs  compile_fixtures.rs  compose_method_tests.rs  element_parsing_tests.rs  error_reporting_integration_tests.rs  error_reporting_tests.rs  insta.yaml  parameterized_selector_tests.rs  real_world_validation.rs  salesforce_compatibility.rs  schema_validation_tests.rs  snapshot_tests.rs
utam-compiler/tests/common/: README.md  mod.rs
utam-compiler/tests/snapshots/: snapshot_tests__clickable_button.snap  snapshot_tests__editable_input.snap  snapshot_tests__shadow_root.snap  snapshot_tests__simple_element.snap  snapshot_tests__simple_method.snap
utam-core/: Cargo.toml  TESTING.md
utam-core/examples/: actionable_usage.rs
utam-core/src/: elements.rs  error.rs  lib.rs  shadow.rs  traits.rs  wait.rs
utam-core/src/drivers/: cdp.rs  mod.rs  webdriver.rs
utam-core/src/elements/: base.rs  clickable.rs  container.rs  draggable.rs  editable.rs  frame.rs  mod.rs  rectangle.rs
utam-core/src/traits/: actionable.rs  clickable.rs  draggable.rs  editable.rs  mod.rs  page_object.rs
utam-core/tests/: container_tests.rs  frame_integration_tests.rs  generated_code_test.rs  live_driver_tests.rs  runtime_tests.rs  shadow_dom_tests.rs
utam-core/tests/common/: README.md  mod.rs
utam-core/tests/testdata/: basic_test.html  frame_content.html  frame_inner.html  frame_nested.html  frame_test.html
utam-runtime/: Cargo.toml
utam-runtime/src/: discovery.rs  driver.rs  element.rs  error.rs  lib.rs  page_object.rs  registry.rs
utam-runtime/src/driver/: cdp_adapter.rs  mod.rs  thirtyfour_adapter.rs
utam-runtime/tests/: compiled_page_objects.rs  dual_adapter.rs  integration_tests.rs  salesforce_live.rs
utam-runtime/tests/sf_live/: account_detail.rs  coverage.rs  desktop_layout.rs  failure.rs  global_create.rs  header.rs  helpers.rs  mod.rs  runner.rs  session.rs  setup_page.rs  shared.rs  synth.rs
utam-test/: Cargo.toml
utam-test/src/: allure.rs  assertions.rs  harness.rs  lib.rs
(+1413 files in other folders)
