[workspace]
resolver = "2"
members = ["utam-core", "utam-compiler", "utam-cli", "utam-test", "utam-runtime", "busbar-sf-api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/composable-delivery/busbar-sf-utam"
keywords = ["testing", "webdriver", "page-object", "automation"]
categories = ["development-tools::testing", "web-programming"]

[workspace.dependencies]
# Browser automation
thirtyfour = "0.36.1"
chromiumoxide = { version = "0.9", features = ["bytes"], default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0.18"
miette = { version = "7", features = ["fancy"] }

# Code generation
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.16.3"
glob = "0.3"
notify = "8.2.0"

# Schema validation
jsonschema = "0.45.1"

# Testing
insta = { version = "1", features = ["json"] }

# Workspace crates
utam-core = { path = "utam-core" }
utam-compiler = { path = "utam-compiler" }
utam-test = { path = "utam-test" }
utam-runtime = { path = "utam-runtime" }
