[package]
name = "busbar-sf-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Salesforce REST API client for test setup and data seeding"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
