[package]
name = "utam-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
utam-core = { path = "../utam-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
