[package]
name = "utam-compiler"
description = "Compiler for UTAM page object JSON to Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease.workspace = true
thiserror.workspace = true
miette.workspace = true
jsonschema.workspace = true

[dev-dependencies]
insta.workspace = true
