[package]
name = "utam-core"
description = "Runtime library for UTAM page object framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thirtyfour.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
utam-compiler = { path = "../utam-compiler" }
