[package]
name = "utam-core"
description = "Runtime library for UTAM page object framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
cdp = ["dep:chromiumoxide", "dep:futures"]

[dependencies]
thirtyfour.workspace = true
chromiumoxide = { version = "0.9.1", optional = true }
futures = { version = "0.3", optional = true }
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
utam-compiler = { path = "../utam-compiler" }
