[package]
name = "utam-runtime"
description = "Runtime interpreter for UTAM page objects — load JSON, call methods dynamically"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
utam-core = { path = "../utam-core" }
utam-compiler = { path = "../utam-compiler" }
thirtyfour.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
