[package]
name = "utam-test"
description = "Test harness and assertion helpers for UTAM page object framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
utam-core = { path = "../utam-core" }
thirtyfour.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
